# fa_crud

./: .gitignore  database.py  main.py  note.md  pyproject.toml
